Introduce ContentAnalysis struct & Vendor struct

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body class="container">
-  <h1>A Simple Hello World Voting Application</h1>
+  <h1>Content Analysis Decentralized Application</h1>
   <div class="col-sm-7 margin-top-3">
     <h2>Candidates</h2>
     <div class="table-responsive">
@@ -26,6 +26,21 @@
         </tbody>
       </table>
     </div>
+
+    <h2>Vendors</h2>
+    <div class="table-responsive">
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Address</th>
+          </tr>
+        </thead>
+        <tbody id="vendor-rows">
+        </tbody>
+      </table>
+    </div>
+
     <div class="container-fluid">
       <h2>Vote for Candidate</h2>
       <div id="msg"></div>
