--- a/app/src/index.html
+++ b/app/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Hello World DApp</title>
+  <title>Content Analysis Decentralized Application</title>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' rel='stylesheet' type='text/css'>
   <style>
@@ -52,6 +52,19 @@
       <br>
       <a href="#" onclick="voteForCandidate()" class="btn btn-primary">Vote</a>
     </div>
+
+    <div class="container-fluid">
+      <h2>Add vendor</h2>
+      <div id="msg-vendor"></div>
+      <input type="text" id="vendor-addr" placeholder="Enter the vendor address"/>
+      <br>
+      <br>
+      <input type="text" id="vendor-name" placeholder="Enter the vendor name"/>
+      <br>
+      <br>
+      <a href="#" onclick="addVendor()" class="btn btn-primary">Add</a>
+    </div>
+
   </div>
   <div class="col-sm-offset-1 col-sm-4 margin-top-3">
     <div class="row">
