Add vendor token count

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -21,6 +21,7 @@
           <tr>
             <th>Name</th>
             <th>Address</th>
+            <th>Tokens</th>
           </tr>
         </thead>
         <tbody id="vendor-rows">
