--- a/app/src/index.html
+++ b/app/src/index.html
@@ -41,6 +41,21 @@
       <a href="#" onclick="addVendor()" class="btn btn-primary">Add</a>
     </div>
 
+    <br>
+
+    <div class="container-fluid">
+      <h2>Get hash</h2>
+      <input type="text" id="gethash-addr" placeholder="Enter the vendor address"/>
+      <br>
+      <br>
+      <input type="text" id="gethash-uri" placeholder="Enter the Uri"/>
+      <br>
+      <br>
+      <a href="#" onclick="getHash()" class="btn btn-primary">Get</a>
+      <div id="gethash-normalized-uri"></div>
+      <div id="gethash-hash"></div>
+  </div>
+
   </div>
   <div class="col-sm-offset-1 col-sm-4 margin-top-3">
     <div class="row">
